--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,11 @@ server:
 security:
   basic:
     enabled: false
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS: false # to prevent exception while serializing empty objects.
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS: false # to prevent exception while serializing empty objects.
 spring:
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
   datasource:
     url: jdbc:postgresql://localhost:5432/iti_admission
     username: postgres
